# build-cpp-project

./: CMakeLists.txt  README.md  build.sh
src/: empty_class.cpp  empty_class.h
